GT New Horizons runs: chunk storage backends, Gradle 8, crash and dupe fixes (#5)
Chunk storage gains a second backend, selected at startup by
-Dorg.ultramine.chunk.storage: off-heap (default, unchanged) or vanilla's
five heap arrays, live and patchable, so ChunkAPI/EndlessIDs/NEID and
Phosphor apply as they do on stock Forge. Both hold the identical
packing, so a world is the same world either way. The GT New Horizons
daily pack now reaches Done on this core - 294 mods, nothing excluded,
Phosphor on, Java 8.

Crash and corruption fixes: the entity tracker and the chunk unloader no
longer iterate live collections while firing Forge events that re-enter
them; the recipe cache stops answering "no such recipe" from a key blind
to NBT, which silently broke tool modifiers, filled cells and programmed
circuits; unidentified connections can no longer make the server hold two
megabytes each.

Java 9+ coremod loading: coremod jars reach the application class path
through the door modern JVMs provide, the class path is read the way
launchwrapper reads it on Java 8, and the core's ASM visitors read class
files as new as the ASM it ships. Coremod-heavy packs still need Java 8;
what remains is third-party bytecode, attributed with evidence in the
notes. launchwrapper stays.

Build: Gradle 6.0.1 -> 8.14.3 with a Java 8 toolchain, the reobfuscation
tasks moved off the removed IncrementalTaskInputs. Tests run the chunk
storage contract against both backends and cover the chunk key and the
vanilla chunk-set adapter.